# test

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  PHASE_1_COMMITS.md  README.md  TESTING.md  config.example.yml  demo_advanced.py  demo_complete.py  demo_ml_pipeline.py  demo_realtime_news.py  demo_simple.py  demo_visual.py  finbert_sentiment_cache.json  phase.txt  pyproject.toml  requirements-dev.txt  requirements.txt  run_dashboard.py  setup_dev.py  verification_output.txt  verify_ml_integration.py
.streamlit/: config.toml
demos/: Huggging_face_finbert.py  demo_full_real_data.py  demo_ml_pipeline.py  demo_real_data_finbert_backtest.py  demo_real_sentiment.py  hugging_face_ml.py  my_backtest.py
demos/data/: create_subset.py  dataDownloader.py  get_unique_symbols.py
docs/: BACKTESTING_WHICH_MODEL_USED.md  CENTRALIZED_CONFIG_IMPLEMENTATION.md  DEMO_ML_PIPELINE_ANALYSIS.md  PHASE_1_COMPLETE.md  PHASE_2_COMPLETE.md  QUICKSTART_TELEGRAM.md  SENTIMENT_AND_TRADE_PLACEMENT.md  SENTIMENT_INVESTING.md  STEP_5_ML_MODEL_TRAINING.md  TELEGRAM_SETUP.md  TRADING_FLOW_DETAILED_REPORT.md  btp_report.md
examples/: advanced_ml_example.py  alerts_example.py  broker_example.py  complete_backtest_example.py  config_examples.py  dashboard_example.py  data_examples.py  live_trading_example.py  ml_example.py  optimization_example.py  paper_trading_alerts.py  portfolio_examples.py  quickstart.py  real_data_example.py  setup_telegram.py  visualization_example.py  walk_forward_example.py
overleaf/: main.tex
portfolio_constructor/: Huggging_face_finbert.py  hugging_face_ml.py
portfolio_constructor/notebooks/: hyperparameterTuningRandomForest.py  hyperparameter_tuning_xgboost.py
portfolio_constructor/utils/: TradeReportYearly.py
rag_pipeline/: README.md  summarize_result_log.py
resultLogs/2026-05-09_00-01-17/: run_details.json
resultLogs/2026-05-09_00-02-16/: run_details.json
resultLogs/2026-05-09_00-03-19/: run_details.json
resultLogs/2026-05-09_00-03-52/: run_details.json
resultLogs/2026-05-09_00-04-56/: run_details.json
resultLogs/2026-05-09_01-37-41/: run_details.json
resultLogs/2026-05-09_01-45-25rf-200-8-regression-4351/: run_details.json
resultLogs/2026-05-09_01-45-25rf-200-8-regression-6096/: run_details.json
resultLogs/2026-05-09_01-45-25rf-200-8-regression-6616/: run_details.json
resultLogs/2026-05-09_01-45-25rf-200-8-regression-8197/: run_details.json
resultLogs/2026-05-09_01-45-25rf-200-8-regression-8271/: run_details.json
resultLogs/2026-05-09_15-03-11rf-200-8-regression-6525/: rag_trade_summary.json  run_details.json
src/jsf/: __init__.py  config.py  settings.py
src/jsf/alerts/: __init__.py  base.py  console.py  factory.py  integration.py  manager.py  telegram.py
src/jsf/assets/: __init__.py  base.py  crypto.py  forex.py  futures.py  options.py
src/jsf/broker/: __init__.py  alpaca.py  base.py  models.py  paper.py
src/jsf/cli/: __init__.py  main.py  setup_telegram.py
src/jsf/config/: __init__.py  base.py  defaults.py  enums.py  schemas.py
src/jsf/dashboard/: __init__.py  __main__.py  app.py  collectors.py  metrics.py  models.py
src/jsf/dashboard/components/: backtest.py  pnl.py  portfolio.py  risk.py  trades.py
src/jsf/dashboard/pages/: __init__.py  pnl.py  portfolio.py  risk.py  trades.py
src/jsf/data/: __init__.py  base.py  loaders.py  preprocessing.py  universe.py
src/jsf/evaluation/: __init__.py
src/jsf/live/: __init__.py  data_handler.py  engine.py  order_manager.py
src/jsf/ml/: __init__.py  export.py  features.py  models.py  montecarlo.py  neural.py  preprocessing.py  registry.py  rl_agent.py  strategy.py  validation.py
src/jsf/optimization/: __init__.py  grid_search.py  walk_forward.py
src/jsf/portfolio/: __init__.py  base.py  constraints.py  constructors.py  optimization.py  rebalancing.py  sizing.py
src/jsf/reporting/: __init__.py
src/jsf/signals/: __init__.py  base.py  composites.py  fundamental.py  sentiment.py  statistical.py  technical.py  transforms.py
src/jsf/simulation/: __init__.py  backtest.py  metrics.py
src/jsf/strategies/: __init__.py  base.py  templates.py
src/jsf/utils/: __init__.py  io.py  logging.py  parallel.py  time_utils.py
src/jsf/visualization/: __init__.py  plots.py
tests/: __init__.py  conftest.py  test_alerts.py  test_assets.py  test_broker.py  test_config.py  test_dashboard.py  test_data.py  test_init.py  test_integration_phases_7_11.py  test_live.py  test_ml.py  test_ml_advanced.py  test_portfolio.py  test_sentiment_signals.py  test_signals.py  test_signals_phase5_6.py  test_simulation.py  test_strategies.py  test_transformers.py  verify_library_readiness.py
(+7 files in other folders)
